Fix mobile text and icon overflow

--- a/main.css
+++ b/main.css
@@ -131,12 +131,14 @@ body {
 .devicons-container {
   display: flex;
   justify-content: center;
-  gap: 1rem;
+  gap: 0.5rem;
+  flex-wrap: wrap;
+  margin-bottom: 2rem;
 }
 
 .project-section .devicon {
   display: inline-block;
-  margin-bottom: 3rem;
+  /* margin-bottom: 3rem; */
   width: 32px;
   height: 32px;
 }
@@ -359,10 +361,6 @@ nav,
 }
 #hero-title div {
   margin-top: 5rem;
-}
-
-#testest {
-  visibility: visible;
 }
 
 #cta,
@@ -1114,6 +1112,7 @@ nav,
 
   .devicons-container {
     justify-content: flex-start;
+    margin-bottom: 3rem;
   }
 
   .treehouse-img-container {
